--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: ''
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 # https://sxbugcom.github.io/sxbug
-url: https://sxbugcom.github.io/sxbug
+url: https://sxbug.com
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
