--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main  # default branch
+  workflow_dispatch:
+    branches:
+      - main  # default branch
 
 jobs:
   pages:
