--- a/_config.landscape.yml
+++ b/_config.landscape.yml
@@ -1,1 +1,4 @@
 links:
+  github: https://github.com/your_github_account
+  twitter: https://twitter.com/your_twitter_account
+  telegram: https://t.me/your_telegram_account
